# TSExam

./: CMakeLists.txt  README.md
src/problem_1/: README.md  geometry.hpp  reorient_triangles.cpp  reorient_triangles.hpp  stl_io.cpp  stl_io.hpp  triangle_mesh.cpp  triangle_mesh.hpp  void_detection.cpp  void_detection.hpp
src/problem_2/: README.md  polyline.cpp  polyline.hpp
tests/problem_1/: test_geometry.cpp  test_reorient_triangles.cpp  test_stl_io.cpp  test_triangle_mesh.cpp  test_void_detection.cpp
tests/problem_2/: test_polyline.cpp
